--- a/Front/FrontPlantoesMedicos/src/components/styles/PlantoesListagem.css
+++ b/Front/FrontPlantoesMedicos/src/components/styles/PlantoesListagem.css
@@ -4,13 +4,25 @@
   }
   
   .line-plantao-consulta {
-    width: 30%;
+    width: 40%;
     border-bottom: solid 2px #6cbc84;
     margin: -10px auto 40px;
   }
   .user-list h1 {
     font-size: 24px;
     margin-bottom: 20px;
+  }
+
+  .filtro-data {
+    border: solid;
+    border-width: 2px;
+    border-radius: 5px;
+    border-color: #6cbc84;
+    background-color: #444;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
   }
   
   .user-list ul {
@@ -41,7 +53,8 @@
   }  
 
   .user-list input {
-    margin: 5px 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 10px 20px;
     margin-left: 10px;
     margin-right: 10px;
@@ -52,33 +65,28 @@
   }  
 
   .user-list button {
-    background-color: #444;
-
     color: #ffffff;
     padding: 8px 16px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     border: 2px solid #555;
-    background-color: #444;
+    background-color: #333;
     color: white;
     font-size: 14px;
     height: 40px;
     cursor: pointer;
     border-radius: 5px;
-    padding: 10px 20px;
     margin-left: 10px;
     margin-right: 10px;
+    margin-top: 10px;
   }  
 
   .user-list button:hover {
     background-color: #555; /* Cor de fundo verde mais escuro */
-    transform: scale(1.0); /* Aumenta o tamanho do botão */
     border:solid;
     border-width: 2px;
     border-color: #6cbc84;
-    text-decoration: none;
-    margin-left: 5px;
   }
   
   .user-list button:active{
@@ -162,3 +170,15 @@
 }
 
 
+@media (max-height: 868px) {
+
+  .line-plantao-consulta {
+    width: 95%;
+  }
+
+  .filtro-data {
+    flex-direction: column;
+    height: 250px;
+  }
+
+}
