--- a/Front/FrontPlantoesMedicos/src/components/styles/plantoesAdmin.css
+++ b/Front/FrontPlantoesMedicos/src/components/styles/plantoesAdmin.css
@@ -6,7 +6,7 @@
 }
 
 .line-admin {
-  width: 20%;
+  width: 40%;
   border-bottom: solid 2px #6cbc84;
   margin: -10px auto 40px;
 }
@@ -16,21 +16,35 @@
   height: 40px;
   font-size: 10px;
   margin-left: 20px;
-  background-color: #333;
-  border: solid 2px #6cbc84;
   color: white;
   border-radius: 5px;
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 2px solid #555;
+  background-color: #333;
+  cursor: pointer;
+  margin-top: 0px;
 }
 
 .usuarios button:hover {
   background-color: #6cbc84;
+  border:solid;
+  border-width: 2px;
+  border-color: #6cbc84;
 }
 
 .pesquisa {
   width: 90%;
-  display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  border: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  border-color: #6cbc84;
+  background-color: #444;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
 }
 
 .plantoes-admin {
@@ -93,8 +107,8 @@
 
 .close-button {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 5px;
+  right: 0px;
   font-size: 24px;
   color: #6cbc84;
   border: none;
@@ -137,7 +151,7 @@ ul {
   color: white;
   font-family: monospace;
   margin: 5px;
-  border: solid 2px #444;
+  border: solid 2px #555;
   background-color: #333;
   border-radius: 5px;
   transition: background-color 0.3s;
@@ -147,18 +161,19 @@ ul {
   background-color: #6cbc84;
 }
 
-.teste {
+.filtro-nome {
   position: relative;
   display: block;
   width: 200px;
   border-radius: 6px;
+  background-color: #333;
   border: 2px solid #6cbc84;
   padding: 8px;
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-.teste .icon {
+.filtro-nome .icon {
   position: absolute;
   top: 53%;
   font-size: 25px;
@@ -168,7 +183,7 @@ ul {
   color: #6cbc84;
 }
 
-.teste .input {
+.filtro-nome .input {
   background-color: transparent;
   outline: none;
   border: none;
@@ -225,6 +240,13 @@ ul {
   border-radius: 5px;
 }
 
+.filtro-download-mes{
+  border: 2px solid #6cbc84 !important;
+  background-color: #555 !important;
+  color: white !important;
+  margin-top: 0px !important;
+}
+
 .tabela-filtro-datas {
   position: relative;
   bottom: 7px;
@@ -232,7 +254,6 @@ ul {
 
 .data-inicio-filtro {
   margin-left: 10px;
-  margin-top: 16px;
   padding: 8px;
   border-radius: 4px;
   border: 2px solid #6cbc84;
@@ -243,7 +264,6 @@ ul {
 
 .data-fim-filtro {
   margin-left: 14px;
-  margin-top: 16px;
   padding: 8px;
   border-radius: 4px;
   border: 2px solid #6cbc84;
@@ -360,6 +380,7 @@ ul {
 .table-container {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   max-height: 400px; /* Adjusted for table container height */
   overflow: auto;
@@ -402,15 +423,17 @@ ul {
 .btn-custom {
   width: 150px;
   margin-top: 10px;
-  background-color: #555;
+  margin-left: 0px;
+  background-color: #333;
   color: white;
   border: none;
   cursor: pointer;
   font-size: 14px;
   border: solid;
   border-width: 2px;
-  border-color: #666; 
+  border-color: #555; 
   border-radius: 5px;
+  
 
 }
 
@@ -469,6 +492,39 @@ ul {
   width: 500px;
   height: 400px;
   background-color: pink;
+}
+
+@media (max-height: 868px) {
+  .pesquisa {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 180px;
+    width: 85%;
+  }
+
+  .usuarios button {
+    margin-left: 0px;
+    margin-top: 10px;
+    width: 220px;
+  }
+
+  .usuarios-encontrados {
+    width: 80%;
+  }
+
+  .line-admin {
+    width: 85%;
+  }
+
+  .filtro-nome {
+    margin-bottom: 0px;
+    margin-top: 0px;
+  }
+
+  .modal-content {
+    width: 80%;
+  }
 }
 
 @media (max-height: 785px) {
