--- a/Front/FrontPlantoesMedicos/src/components/styles/userList.css
+++ b/Front/FrontPlantoesMedicos/src/components/styles/userList.css
@@ -136,6 +136,7 @@
   }
   
   .usuarios-encontrados{
+    background-color: #444;
     border: solid 3px #6cbc84;
     padding: 10px;
     margin: 15px;
