--- a/Front/FrontPlantoesMedicos/src/components/styles/plantoesRefeito.css
+++ b/Front/FrontPlantoesMedicos/src/components/styles/plantoesRefeito.css
@@ -1,355 +1,358 @@
 body {
-    background-color: #333;
-    color: white;
-    font-family: Arial, sans-serif;
+  background-color: #333;
+  color: white;
+  font-family: Arial, sans-serif;
 }
 
 h1 {
-    text-align: center;
-    color: #ffffff;
+  text-align: center;
+  color: #ffffff;
 }
 
-.line-plantao24 {
-    width: 45%;
-    border-bottom: solid 2px #6cbc84;
-    margin: -10px auto 40px;
-  }
+.line-plantao24-1 {
+  width: 45%;
+  border-bottom: solid 2px #6cbc84;
+  margin: -10px auto 40px;
+}
+
+.line-plantao24-2 {
+  width: 45%;
+  border-bottom: solid 2px #6cbc84;
+  margin: -10px auto 40px;
+}
 
 .msg-erro-plantao24h {
-    display: flex;
-    color: red;
-    justify-content: center;
-    text-decoration: underline;
-    margin-top: 10px;
-  }
+  display: flex;
+  color: red;
+  justify-content: center;
+  text-decoration: underline;
+  margin-top: 10px;
+}
 
-.filtro-pesquisa{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding-bottom: 10px;
-    align-items: baseline;
-    justify-content: center;
-    width: 100%;
-    text-align: center;
+.filtro-pesquisa {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-bottom: 10px;
+  align-items: baseline;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
 }
 
 .filtro-pesquisa label {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  cursor: pointer;
 }
 
 input[type="month"] {
-    margin-left: 10px;
-    margin-top: 16px;
-    padding: 8px;
-    border-radius: 4px;
-    border: 2px solid #6cbc84;
-    background-color: #444;
-    color: white;
+  margin-left: 10px;
+  margin-top: 16px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 2px solid #6cbc84;
+  background-color: #444;
+  color: white;
 }
 
 button {
-    
-    background-color: #6cbc84;
-    margin-left: 10px;
-    padding: 10px 16px;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  background-color: #6cbc84;
+  margin-left: 10px;
+  padding: 10px 16px;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: #58a76b;
+  background-color: #58a76b;
 }
 
 input[type="checkbox"] {
-    margin-right: 8px;
-    cursor: pointer;
+  margin-right: 8px;
+  cursor: pointer;
 }
 
-.selecao-plantao{
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;
+.selecao-plantao {
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
 }
 
-.menu-plantoes{
-    display: flex;
-    border: solid;
-    border-width: 2px;
-    padding: 10px;
-    border-color: #6cbc84;
-    background-color:#444;
-    justify-content: center;
-    border-radius: 5px;
-    width: 30%;
+.menu-plantoes {
+  display: flex;
+  border: solid;
+  border-width: 2px;
+  padding: 10px;
+  border-color: #6cbc84;
+  background-color: #444;
+  justify-content: center;
+  border-radius: 5px;
+  width: 30%;
 }
 
-.selecao-escala{
-    padding-top: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+.selecao-escala {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
-.oftalmo24h{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.oftalmo24h {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.cardiaca24h{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.cardiaca24h {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.cirurgiatorConsulta{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.cirurgiatorConsulta {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.cirurgiavasConsulta{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.cirurgiavasConsulta {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.ginecologiaConsulta1{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.ginecologiaConsulta1 {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.ginecologiaConsulta2{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.ginecologiaConsulta2 {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.hkidsPed{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.hkidsPed {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.hkidsPlant{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.hkidsPlant {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.oftalmo24h{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.oftalmo24h {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.ortoPlant{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.ortoPlant {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.uciPlant{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.uciPlant {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.utigPlant1{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.utigPlant1 {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.utigPlant2{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.utigPlant2 {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.utinPlant{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.utinPlant {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.utipPlant{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.utipPlant {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.otoConsulta{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.otoConsulta {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.uroPlant{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.uroPlant {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.partoPlantao{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.partoPlantao {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.pronto1Consulta{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.pronto1Consulta {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.pronto2Consulta{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.pronto2Consulta {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.pediatria24h{
-    display: flex;
-    cursor: pointer;
-    justify-content: flex-start;
+.pediatria24h {
+  display: flex;
+  cursor: pointer;
+  justify-content: flex-start;
 }
 
-.plantoes-list{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.plantoes-list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .plantao-card {
-    border: solid 2px #555;
-    width: 40%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    background-color: #444;
-    border-radius: 8px;
-    padding: 16px;
-    margin: 16px 0;
-    cursor: pointer;
-    transition: 0.4s;
+  border: solid 2px #555;
+  width: 40%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #444;
+  border-radius: 8px;
+  padding: 16px;
+  margin: 16px 0;
+  cursor: pointer;
+  transition: 0.4s;
 }
 
 .plantao-card.selected {
-    border-color: #6cbc84;
-    transform: translateY(-10px);
+  border-color: #6cbc84;
+  transform: translateY(-10px);
 }
 
 .buttons {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
 }
 
 .plantao-card .buttons {
-    display: none;
+  display: none;
 }
 
 .plantao-card.selected .buttons {
-    display: flex;
+  display: flex;
 }
 
 .button-finalizar {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
 }
 
-.plantao-card .button-finalizar  {
-    display: none;
+.plantao-card .button-finalizar {
+  display: none;
 }
 
-.plantao-card.selected .button-finalizar  {
-    display: flex;
+.plantao-card.selected .button-finalizar {
+  display: flex;
 }
 
 .selecao-grupo-horarios {
-    display: flex;    
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .selecao-tipo-plantao {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .radio-group-escalas {
-    display: flex;
-    justify-content: center;
-    border: 2px solid #6cbc84;
-    border-radius: 5px;
-    width: 200px;
-    height: 180px;
-    background-color: #333;
+  display: flex;
+  justify-content: center;
+  border: 2px solid #6cbc84;
+  border-radius: 5px;
+  width: 200px;
+  height: 180px;
+  background-color: #333;
 }
 
 .botao-manha {
-    display: flex;
-    justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .botao-tarde {
-    display: flex;
-    justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .botao-noite {
-    display: flex;
-    justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .botao-diurno {
-    display: flex;
-    justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .botao-24horas {
-    display: flex;
-    justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .confirm-button-plantoes {
-    background-color: #6cbc84 !important;
-    color: #ffffff !important;
-    border: none !important;
-    padding: 10px 20px !important;
-    border-radius: 4px !important;
-    cursor: pointer !important;
-    font-size: 16px !important;
-    margin-left: 0px !important;
-    margin-top: 16px !important;
+  background-color: #6cbc84 !important;
+  color: #ffffff !important;
+  border: none !important;
+  padding: 10px 20px !important;
+  border-radius: 4px !important;
+  cursor: pointer !important;
+  font-size: 16px !important;
+  margin-left: 0px !important;
+  margin-top: 16px !important;
 }
 
 .permissao-plantao-mensagem {
-    display: flex;
-    color: red;
-    justify-content: center;
-    text-decoration: underline;
-    margin-top: 10px;
+  display: flex;
+  color: red;
+  justify-content: center;
+  text-decoration: underline;
+  margin-top: 10px;
 }
-
 
 input[type="date"] {
-    margin-left: 10px;
-    margin-top: 16px;
-    padding: 8px;
-    border-radius: 4px;
-    border: 2px solid #6cbc84;
-    background-color: #444;
-    color: white;
+  margin-left: 10px;
+  margin-top: 16px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 2px solid #6cbc84;
+  background-color: #444;
+  color: white;
 }
-
