FHSL Plantões Médicos V 2.5.4

--- a/Front/FrontPlantoesMedicos/src/components/styles/plantoes24.css
+++ b/Front/FrontPlantoesMedicos/src/components/styles/plantoes24.css
@@ -260,3 +260,13 @@ input[type="checkbox"] {
     border-color: #6cbc84;
     translate: 0 -10px;
 }
+
+@media (max-width: 480px) {
+.menu-plantoes {
+    width: 20em;
+}
+
+.plantao-card {
+    width: 20em;
+}
+}
