--- a/Front/FrontPlantoesMedicos/src/components/styles/styleLogin.css
+++ b/Front/FrontPlantoesMedicos/src/components/styles/styleLogin.css
@@ -84,11 +84,131 @@
   text-decoration: underline;
 }
 
+.modal-suporte-login {
+  width: 40em;
+  height: 20em;
+  background-color: #444;
+  border-color: #6cbc84;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  position: fixed;
+  display: flex;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+}
+
+.dimmer-login {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 999;
+}
+
+.close-suporte-login {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  cursor: pointer;
+  color: #fff;
+  font-size: 20px;
+  transition: 0.4s;
+}
+
+.close-suporte-login:hover {
+  transition: 0.4s;
+  color: #6cbc84;
+}
+
+.titulo-suporte-login {
+  width: 40em;
+  height: 20em;
+  display: flex;
+  justify-content: center;
+}
+
+.titulo-suporte-texto-login {
+  display: flex;
+  font-size: 20px;
+}
+.conteudo-suporte-login {
+  display: flex;
+  position: absolute;
+  top: 20%;
+  left: 1%;
+}
+
+.conteudo-suporte-texto-login {
+  display: flex;
+  text-align: justify;
+}
+
+.conteudo-suporte-creditos-login {
+  display: flex;
+  position: absolute;
+  top: 77%;
+  left: 1%;
+}
+
+.counteudo-creditos-texto-login {
+  display: flex;
+  text-align: justify;
+}
+
+.logo-suporte-login {
+  display: flex;
+  position: absolute;
+  width: 15em;
+  height: 5em;
+  left: 66%;
+  top: 75%;
+}
+
+.logo-suporte-img-login {
+  display: flex;
+  width: 200px;
+}
+
+.line5 {
+width: 40%;
+border-bottom: 2px solid #6cbc84;
+border-radius: 2px;
+display: flex;
+position: absolute; 
+top: 75%
+}
+
 @media (max-width: 480px) {
   .img-logo {
-    padding-top: 30px;
-    width: 270px;
-    margin-bottom: 50px;
+    width: 20em;
+  }
+  .modal-suporte-login {
+    width: 23em;
+    height: 30em;
+  }
+
+  .titulo-suport-login {
+    width: 40em;
+    height: 3em;
+    display: flex;
+    justify-content: center;
+  }
+
+  .line5 {
+    opacity: 0;
+    width: 1px;
+    height: 1px;
+    position: absolute;
+  }
+
+  .logo-suporte-login {
+    left: 25%;
+    top: 60%;
   }
 }
 
